# hoard

./: .gitignore  69b7de54-38c7-4733-8241-b73804aaafa6.html  852a6e49-4b9c-429e-b612-6c505ab78827.html  9916ba93-6978-4406-b96f-1d1a476c1931.html  CHANGELOG.md  LICENSE  README.md  README.org  a1b2c3d4-0001-4000-8000-000000000001.html  a1b2c3d4-0002-4000-8000-000000000002.html  b65136a2-13b9-4296-920f-4058f1dd90ae.html  bib.bib  c348132e-7cdf-438d-9a1f-69d75f382bee.html  d4e5f6a7-1001-4000-8000-000000000011.html  d4e5f6a7-1002-4000-8000-000000000012.html  d4e5f6a7-1003-4000-8000-000000000013.html  d4e5f6a7-1004-4000-8000-000000000014.html  d4e5f6a7-1005-4000-8000-000000000015.html  d4e5f6a7-1006-4000-8000-000000000016.html  d4e5f6a7-1007-4000-8000-000000000017.html  d4e5f6a7-1008-4000-8000-000000000018.html  d4e5f6a7-1009-4000-8000-000000000019.html  e5f6a7b8-2001-4000-8000-000000000021.html  e5f6a7b8-2002-4000-8000-000000000022.html  e5f6a7b8-2003-4000-8000-000000000023.html  f6a7b8c9-3001-4000-8000-000000000031.html  f6a7b8c9-3002-4000-8000-000000000032.html  f6a7b8c9-3003-4000-8000-000000000033.html  f6a7b8c9-3004-4000-8000-000000000034.html  f6a7b8c9-3005-4000-8000-000000000035.html  index.html  index.org  pyproject.toml  read.org  refile.org
docs/: INTRODUCTION.md  MIGRATION.md  QUICKSTART.md  README.md  WHY-HOARD.md  spec-directory-and-types.md  spec-directory-and-types.org  spec-mcp-tools.md  spec-mcp-tools.org  spec-overlays.md  spec-quad-format.md  spec-quad-format.org  spec-vocabulary.md  spec-vocabulary.org
scripts/: bib-import.py  wemi-phase1.py
(+108 files in other folders)
